# conda-controlplane

./: .gitignore  DOCS_WORKING_NOTES.md  README.md  ai-tools.manifest.yaml  plan-condaControlplane.prompt.md  pyproject.toml  tmp.prompt.md
.github/: copilot-instructions.md
.github/prompts/: plan-condaControlplane.prompt.md  refactor-prompt.md
docs/: base-env-policy.md  overview.md  tools.md
src/conda_controlplane/: __init__.py  plugin.py  tools.py
src/conda_controlplane/cli/: __init__.py  main.py
src/conda_controlplane/core/: __init__.py  common.py  conda_base.py  formatting.py  inspect_compilers.py  inspect_controlplane.py  inspect_network.py  inspect_packaging.py  inspect_solvers.py
src/conda_controlplane/shell/: __init__.py  zsh_shim.zsh
src/control_controlplane/: cli.py  conda.py  report.py  tools.py
tests/: test_core.py
